# Basel-III-IRB-Capital-Engine

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/models/: irb_capital.py  vasicek.py
src/portfolio/: analytics.py  generator.py
src/stress/: scenarios.py
src/utils/: math_utils.py
src/visualization/: charts.py
tests/: test_irb_capital.py  test_portfolio.py  test_vasicek.py
